[package]
name = "rusty_osquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termimad = "0.14"
ansi_term = "0.12.1"
regex = "1"
chrono = "0.4.1"
itertools = "0.6.0"
nom = "7.1.1"
crossterm = "0.23.1"